Add GitHub profile integration with dynamic API loading
- Integrated GitHub API to fetch and display profile data for @stephenolaussen
- Added interactive GitHub profile modal with comprehensive stats
- Added GitHub preview section on main page with live stats
- Enhanced navbar with GitHub profile access
- Added repository showcase with live data from GitHub API
- Implemented responsive GitHub profile cards with animations
- Added loading states and error handling for API calls
- Updated contact section with direct GitHub profile access
- Enhanced UI with GitHub-themed styling and hover effects

--- a/index.html
+++ b/index.html
@@ -453,6 +453,52 @@
             </div>
         </section>
 
+        <!-- GitHub Profile Preview Section -->
+        <section class="github-preview-section py-5">
+            <div class="container">
+                <h2 class="section-title text-center mb-5">
+                    <i class="fab fa-github"></i> GitHub Profile
+                </h2>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="github-preview-card">
+                            <div class="github-preview-content text-center">
+                                <div class="github-preview-avatar mb-3">
+                                    <i class="fab fa-github github-preview-icon"></i>
+                                </div>
+                                <h4 class="text-white mb-3">@stephenolaussen</h4>
+                                <p class="text-muted mb-4">Explore my repositories, contributions, and coding journey on GitHub</p>
+                                
+                                <div class="github-preview-stats mb-4" id="githubPreviewStats">
+                                    <div class="preview-stat">
+                                        <div class="preview-stat-number" id="previewRepos">--</div>
+                                        <div class="preview-stat-label">Repositories</div>
+                                    </div>
+                                    <div class="preview-stat">
+                                        <div class="preview-stat-number" id="previewFollowers">--</div>
+                                        <div class="preview-stat-label">Followers</div>
+                                    </div>
+                                    <div class="preview-stat">
+                                        <div class="preview-stat-number" id="previewStars">--</div>
+                                        <div class="preview-stat-label">Stars</div>
+                                    </div>
+                                </div>
+                                
+                                <div class="github-preview-actions">
+                                    <button class="btn btn-success btn-lg me-3" id="loadGithubProfile">
+                                        <i class="fab fa-github"></i> View Full Profile
+                                    </button>
+                                    <a href="https://github.com/stephenolaussen" target="_blank" class="btn btn-outline-light btn-lg">
+                                        <i class="fas fa-external-link-alt"></i> Visit GitHub
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact Section -->
         <section class="contact-section py-5">
             <div class="container">
