--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="col-lg-6">
                         <div class="hero-content">
                             <h1 class="hero-title">
-                                Welcome to <span class="text-gradient">DevSpace</span>
+                                <span class="text-gradient">Welcome to DevSpace</span>
                                 <i class="fas fa-rocket hero-rocket"></i>
                             </h1>
                             <p class="hero-subtitle">Your ultimate coding hub for development, learning, and innovation</p>
@@ -180,10 +180,10 @@
                                 </div>
                             </div>
                                 <div class="hero-buttons">
-                                <button class="btn btn-primary btn-lg me-3" id="startCodingBtn" onclick="alert('Start Coding clicked!')">
+                                <button class="btn btn-primary btn-lg me-3" id="startCodingBtn">
                                     <i class="fas fa-code"></i> Start Coding
                                 </button>
-                                <button class="btn btn-outline-light btn-lg" id="exploreProjectsBtn" onclick="alert('Explore Projects clicked!')">
+                                <button class="btn btn-outline-light btn-lg" id="exploreProjectsBtn">
                                     <i class="fas fa-eye"></i> Explore Projects
                                 </button>
                             </div>
@@ -220,13 +220,13 @@
                 <div class="row g-4">
                     <!-- JSON Formatter -->
                     <div class="col-lg-4 col-md-6">
-                        <div class="tool-card" data-tool="json" onclick="openTool('json')">
+                        <div class="tool-card" data-tool="json">
                             <div class="tool-icon">
                                 <i class="fas fa-code"></i>
                             </div>
                             <h4>JSON Formatter</h4>
                             <p>Format and validate your JSON data instantly</p>
-                            <button class="btn btn-primary" onclick="event.stopPropagation(); openTool('json')">
+                            <button class="btn btn-primary tool-btn" data-tool="json">
                                 <i class="fas fa-external-link-alt"></i> Open Tool
                             </button>
                         </div>
@@ -234,13 +234,13 @@
 
                     <!-- Color Picker -->
                     <div class="col-lg-4 col-md-6">
-                        <div class="tool-card" data-tool="color" onclick="openTool('color')">
+                        <div class="tool-card" data-tool="color">
                             <div class="tool-icon">
                                 <i class="fas fa-palette"></i>
                             </div>
                             <h4>Color Picker</h4>
                             <p>Generate perfect color schemes for your projects</p>
-                            <button class="btn btn-primary" onclick="event.stopPropagation(); openTool('color')">
+                            <button class="btn btn-primary tool-btn" data-tool="color">
                                 <i class="fas fa-external-link-alt"></i> Open Tool
                             </button>
                         </div>
@@ -248,13 +248,13 @@
 
                     <!-- Base64 Encoder -->
                     <div class="col-lg-4 col-md-6">
-                        <div class="tool-card" data-tool="base64" onclick="openTool('base64')">
+                        <div class="tool-card" data-tool="base64">
                             <div class="tool-icon">
                                 <i class="fas fa-key"></i>
                             </div>
                             <h4>Base64 Encoder</h4>
                             <p>Encode and decode Base64 strings</p>
-                            <button class="btn btn-primary" onclick="event.stopPropagation(); openTool('base64')">
+                            <button class="btn btn-primary tool-btn" data-tool="base64">
                                 <i class="fas fa-external-link-alt"></i> Open Tool
                             </button>
                         </div>
@@ -262,13 +262,13 @@
 
                     <!-- URL Encoder -->
                     <div class="col-lg-4 col-md-6">
-                        <div class="tool-card" data-tool="url" onclick="openTool('url')">
+                        <div class="tool-card" data-tool="url">
                             <div class="tool-icon">
                                 <i class="fas fa-link"></i>
                             </div>
                             <h4>URL Encoder</h4>
                             <p>Encode and decode URLs safely</p>
-                            <button class="btn btn-primary" onclick="event.stopPropagation(); openTool('url')">
+                            <button class="btn btn-primary tool-btn" data-tool="url">
                                 <i class="fas fa-external-link-alt"></i> Open Tool
                             </button>
                         </div>
@@ -276,13 +276,13 @@
 
                     <!-- QR Code Generator -->
                     <div class="col-lg-4 col-md-6">
-                        <div class="tool-card" data-tool="qr" onclick="openTool('qr')">
+                        <div class="tool-card" data-tool="qr">
                             <div class="tool-icon">
                                 <i class="fas fa-qrcode"></i>
                             </div>
                             <h4>QR Generator</h4>
                             <p>Create QR codes for any text or URL</p>
-                            <button class="btn btn-primary" onclick="event.stopPropagation(); openTool('qr')">
+                            <button class="btn btn-primary tool-btn" data-tool="qr">
                                 <i class="fas fa-external-link-alt"></i> Open Tool
                             </button>
                         </div>
@@ -290,13 +290,13 @@
 
                     <!-- Hash Generator -->
                     <div class="col-lg-4 col-md-6">
-                        <div class="tool-card" data-tool="hash" onclick="openTool('hash')">
+                        <div class="tool-card" data-tool="hash">
                             <div class="tool-icon">
                                 <i class="fas fa-hashtag"></i>
                             </div>
                             <h4>Hash Generator</h4>
                             <p>Generate MD5, SHA1, SHA256 hashes</p>
-                            <button class="btn btn-primary" onclick="event.stopPropagation(); openTool('hash')">
+                            <button class="btn btn-primary tool-btn" data-tool="hash">
                                 <i class="fas fa-external-link-alt"></i> Open Tool
                             </button>
                         </div>
