--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     
                     <!-- Tools Dropdown -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" id="devToolsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" id="devToolsDropdown">
                             <i class="fas fa-tools"></i> Dev Tools
                         </a>
                         <ul class="dropdown-menu programming-dropdown">
