Fix ALL navbar dropdowns - Languages, Dev Tools, and Profile/Developer dropdowns now work consistently

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     
                     <!-- Programming Languages Dropdown -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" id="languagesDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" id="languagesDropdown">
                             <i class="fas fa-code"></i> Languages
                         </a>
                         <ul class="dropdown-menu programming-dropdown">
@@ -119,7 +119,7 @@
                     
                     <!-- User dropdown -->
                     <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle profile-btn" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-primary dropdown-toggle profile-btn" type="button" id="profileDropdown">
                             <i class="fas fa-user-circle"></i> Developer
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end programming-dropdown">
