--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
                         </a>
                     </li>
                     
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-section="ai-tools">
+                            <i class="fas fa-robot"></i> AI Tools
+                        </a>
+                    </li>
+                    
                     <!-- Tools Dropdown -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" id="devToolsDropdown">
@@ -183,9 +189,9 @@
                                 <button class="btn btn-primary btn-lg me-3" id="startCodingBtn">
                                     <i class="fas fa-code"></i> Start Coding
                                 </button>
-                                <button class="btn btn-outline-light btn-lg" id="exploreProjectsBtn">
-                                    <i class="fas fa-eye"></i> Explore Projects
-                                </button>
+                                <a href="https://github.com/public-apis/public-apis" target="_blank" class="btn btn-outline-light btn-lg">
+                                    <i class="fas fa-rocket"></i> Explore Project Ideas
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -593,6 +599,131 @@
                             </div>
                         </div>
                     </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- AI Tools Section -->
+        <section class="ai-section py-5" style="background: #1a1a2e;">
+            <div class="container">
+                <h2 class="section-title text-center mb-4">
+                    <i class="fas fa-robot"></i> AI Development Tools
+                </h2>
+                <p class="text-center text-muted mb-5">
+                    Supercharge your development with cutting-edge AI assistants
+                </p>
+                <div class="row g-4">
+                    <!-- ChatGPT -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="ai-card">
+                            <div class="ai-icon">
+                                <i class="fas fa-comments"></i>
+                            </div>
+                            <h5>ChatGPT</h5>
+                            <p class="text-muted">AI-powered code assistant and problem solver</p>
+                            <a href="https://chat.openai.com/" target="_blank" class="btn btn-ai btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Try ChatGPT
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- GitHub Copilot -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="ai-card">
+                            <div class="ai-icon">
+                                <i class="fab fa-github"></i>
+                            </div>
+                            <h5>GitHub Copilot</h5>
+                            <p class="text-muted">AI pair programmer for VS Code</p>
+                            <a href="https://github.com/features/copilot" target="_blank" class="btn btn-ai btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Get Copilot
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Claude -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="ai-card">
+                            <div class="ai-icon">
+                                <i class="fas fa-brain"></i>
+                            </div>
+                            <h5>Claude AI</h5>
+                            <p class="text-muted">Advanced AI for coding and analysis</p>
+                            <a href="https://claude.ai/" target="_blank" class="btn btn-ai btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Try Claude
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Cursor -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="ai-card">
+                            <div class="ai-icon">
+                                <i class="fas fa-code"></i>
+                            </div>
+                            <h5>Cursor IDE</h5>
+                            <p class="text-muted">AI-first code editor</p>
+                            <a href="https://cursor.sh/" target="_blank" class="btn btn-ai btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Get Cursor
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Google Gemini -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="ai-card">
+                            <div class="ai-icon">
+                                <i class="fab fa-google"></i>
+                            </div>
+                            <h5>Google Gemini</h5>
+                            <p class="text-muted">Google's multimodal AI</p>
+                            <a href="https://gemini.google.com/" target="_blank" class="btn btn-ai btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Try Gemini
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Tabnine -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="ai-card">
+                            <div class="ai-icon">
+                                <i class="fas fa-keyboard"></i>
+                            </div>
+                            <h5>Tabnine</h5>
+                            <p class="text-muted">AI code completion</p>
+                            <a href="https://www.tabnine.com/" target="_blank" class="btn btn-ai btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Get Tabnine
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Replit AI -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="ai-card">
+                            <div class="ai-icon">
+                                <i class="fas fa-laptop-code"></i>
+                            </div>
+                            <h5>Replit AI</h5>
+                            <p class="text-muted">AI-powered online IDE</p>
+                            <a href="https://replit.com/" target="_blank" class="btn btn-ai btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Try Replit
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Phind -->
+                    <div class="col-lg-3 col-md-6">
+                        <div class="ai-card">
+                            <div class="ai-icon">
+                                <i class="fas fa-search"></i>
+                            </div>
+                            <h5>Phind</h5>
+                            <p class="text-muted">AI search for developers</p>
+                            <a href="https://www.phind.com/" target="_blank" class="btn btn-ai btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Try Phind
+                            </a>
                         </div>
                     </div>
                 </div>
