added to the top icon

--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,10 @@
             </div>
         </div>
     </div>
-
+        <!-- Back to Top Button -->
+<button id="backToTopBtn" class="back-to-top-btn" title="Back to Top">
+    <i class="fas fa-arrow-up"></i>
+</button>
     <script src="./bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
