--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <main id="mainContent">
         <!-- Hero Section -->
         <section class="hero-section">
+            <div class="gif-container"></div>
             <div class="container">
                 <div class="row align-items-center min-vh-100">
                     <div class="col-lg-6">
