for Weather in navbar

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </ul>
                     </li>
                 </ul>
-                
+                <div id="navbar-weather" class="d-flex align-items-center ms-3" style="color:#4CAF50;font-weight:500;font-size:1rem;"></div>
                 <!-- Search functionality -->
                 <div class="d-flex align-items-center me-3">
                     <div class="search-container">
