--- a/index.html
+++ b/index.html
@@ -848,21 +848,21 @@
                         <h2 class="section-title mb-4">
                             <i class="fas fa-handshake"></i> Let's Connect
                         </h2>
-                        <p class="mb-4">Ready to collaborate on amazing projects? Let's build something incredible together!</p>
+                        <p id="collaborate" class="mb-4">Ready to collaborate on amazing projects? Let's build something incredible together!</p>
                         <div class="contact-links">
-                            <a href="#" class="contact-link" data-platform="github">
+                            <a href="https://github.com/stephenolaussen" class="contact-link" data-platform="github">
                                 <i class="fab fa-github"></i>
                                 <span>GitHub</span>
                             </a>
-                            <a href="#" class="contact-link" data-platform="linkedin">
+                            <a href="https://www.linkedin.com/in/stephen-olaussen-9b78bba4" class="contact-link" data-platform="linkedin">
                                 <i class="fab fa-linkedin"></i>
                                 <span>LinkedIn</span>
                             </a>
-                            <a href="#" class="contact-link" data-platform="email">
+                            <a href="mailto:stephenolaussen@gmail.com" class="contact-link" data-platform="email">
                                 <i class="fas fa-envelope"></i>
                                 <span>Email</span>
                             </a>
-                            <a href="#" class="contact-link" data-platform="discord">
+                            <a href="https://discord.com/invite/" class="contact-link" data-platform="discord">
                                 <i class="fab fa-discord"></i>
                                 <span>Discord</span>
                             </a>
