fix text description with gradients

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="col-lg-6">
                         <div class="hero-content">
                             <h1 class="hero-title">
-                                <span class="text-gradient">Welcome to DevSpace</span>
+                                <span class="text-gradient">Welcome To My DevSpace</span>
                                 <i class="fas fa-rocket hero-rocket"></i>
                             </h1>
                             <p class="hero-subtitle">Your ultimate coding hub for development, learning, and innovation</p>
@@ -318,7 +318,7 @@
                 <h2 class="section-title text-center mb-5">
                     <i class="fas fa-folder-open"></i> Featured Projects
                 </h2>
-                <p class="text-center text-muted mb-4">
+                <p id="featured-projects" class="text-center text-muted mb-4">
                     Check out my Noroff backend development projects on GitHub
                 </p>
                 <div class="row g-4">
@@ -612,7 +612,7 @@
                 <h2 class="section-title text-center mb-4">
                     <i class="fas fa-robot"></i> AI Development Tools
                 </h2>
-                <p class="text-center text-muted mb-5">
+                <p id="ai-tools-description" class="text-center text-muted mb-5">
                     Supercharge your development with cutting-edge AI assistants
                 </p>
                 <div class="row g-4">
@@ -878,7 +878,7 @@
                 <h2 class="text-center mb-3 text-gradient">
                     <i class="fas fa-graduation-cap"></i> Noroff Backend Development Tutorials
                 </h2>
-                <p class="text-center text-muted mb-5">
+                <p id="tutorials-description" class="text-center text-muted mb-5">
                     High-quality courses to master backend & frontend development
                 </p>
                 
