--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
         </section>
 
         <!-- AI Tools Section -->
-        <section class="ai-section py-5" style="background: #1a1a2e;">
+        <section class="ai-section py-5">
             <div class="container">
                 <h2 class="section-title text-center mb-4">
                     <i class="fas fa-robot"></i> AI Development Tools
@@ -873,7 +873,7 @@
         </section>
 
         <!-- Tutorials Section - Noroff Backend Development -->
-        <section class="tutorials-section py-5 bg-dark" id="tutorials" style="display: none;">
+        <section class="tutorials-section py-5" id="tutorials" style="display: none;">
             <div class="container">
                 <h2 class="text-center mb-3 text-gradient">
                     <i class="fas fa-graduation-cap"></i> Noroff Backend Development Tutorials
