fix text gradient AI section

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                                 <i class="fas fa-comments"></i>
                             </div>
                             <h5>ChatGPT</h5>
-                            <p class="text-muted">AI-powered code assistant and problem solver</p>
+                            <p id="ai-chat1" class="text-muted">AI-powered code assistant and problem solver</p>
                             <a href="https://chat.openai.com/" target="_blank" class="btn btn-ai btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Try ChatGPT
                             </a>
@@ -637,7 +637,7 @@
                                 <i class="fab fa-github"></i>
                             </div>
                             <h5>GitHub Copilot</h5>
-                            <p class="text-muted">AI pair programmer for VS Code</p>
+                            <p id="ai-chat2" class="text-muted">AI pair programmer for VS Code</p>
                             <a href="https://github.com/features/copilot" target="_blank" class="btn btn-ai btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Get Copilot
                             </a>
@@ -651,7 +651,7 @@
                                 <i class="fas fa-brain"></i>
                             </div>
                             <h5>Claude AI</h5>
-                            <p class="text-muted">Advanced AI for coding and analysis</p>
+                            <p id="ai-chat3" class="text-muted">Advanced AI for coding and analysis</p>
                             <a href="https://claude.ai/" target="_blank" class="btn btn-ai btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Try Claude
                             </a>
@@ -665,7 +665,7 @@
                                 <i class="fas fa-code"></i>
                             </div>
                             <h5>Cursor IDE</h5>
-                            <p class="text-muted">AI-first code editor</p>
+                            <p id="ai-chat4" class="text-muted">AI-first code editor</p>
                             <a href="https://cursor.sh/" target="_blank" class="btn btn-ai btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Get Cursor
                             </a>
@@ -679,7 +679,7 @@
                                 <i class="fab fa-google"></i>
                             </div>
                             <h5>Google Gemini</h5>
-                            <p class="text-muted">Google's multimodal AI</p>
+                            <p id="ai-chat5" class="text-muted">Google's multimodal AI</p>
                             <a href="https://gemini.google.com/" target="_blank" class="btn btn-ai btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Try Gemini
                             </a>
@@ -693,7 +693,7 @@
                                 <i class="fas fa-keyboard"></i>
                             </div>
                             <h5>Tabnine</h5>
-                            <p class="text-muted">AI code completion</p>
+                            <p id="ai-chat6" class="text-muted">AI code completion</p>
                             <a href="https://www.tabnine.com/" target="_blank" class="btn btn-ai btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Get Tabnine
                             </a>
@@ -707,7 +707,7 @@
                                 <i class="fas fa-laptop-code"></i>
                             </div>
                             <h5>Replit AI</h5>
-                            <p class="text-muted">AI-powered online IDE</p>
+                            <p id="ai-chat7" class="text-muted">AI-powered online IDE</p>
                             <a href="https://replit.com/" target="_blank" class="btn btn-ai btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Try Replit
                             </a>
@@ -721,7 +721,7 @@
                                 <i class="fas fa-search"></i>
                             </div>
                             <h5>Phind</h5>
-                            <p class="text-muted">AI search for developers</p>
+                            <p id="ai-chat8" class="text-muted">AI search for developers</p>
                             <a href="https://www.phind.com/" target="_blank" class="btn btn-ai btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Try Phind
                             </a>
